--- a/_main.cfg
+++ b/_main.cfg
@@ -29,6 +29,8 @@ data/add-ons/Zeth_Underland#enddef
 
 	year="588 YW"
 
+	first_scenario=Entrance
+
 	[about]
 		title = _ "Campaign Author"
 		[entry]
