--- a/scenarios/Entrance.cfg
+++ b/scenarios/Entrance.cfg
@@ -4,6 +4,7 @@
 	id=Entrance
 	name= _ "Entrance"
 	map_data="{LD maps/Entrance.map}"
+	next_scenario=Earth
 
 	turns=15
 	victory_when_enemies_defeated=no
@@ -73,7 +74,7 @@
 
 		[message]
 			speaker=Zeth
-			message= _ "I and my gang must retrieve the body of Abel from his tomb. You've asked me that already, Master Cain, and besides, Master Morri will be with me."
+			message= _ "My gang and I must retrieve the body of Abel from his tomb. You've asked me that already, Master Cain. Besides, Master Morri will be with me."
 		[/message]
 
 		[message]
