--- a/scenarios/Earth.cfg
+++ b/scenarios/Earth.cfg
@@ -6,19 +6,21 @@
 	map_data="{LD maps/Earth.map}"
 	next_scenario=Power
 
-	turns=15
+	turns=20
 	victory_when_enemies_defeated=yes
+	{NEW_GOLD_CARRYOVER 40}
 
 	{DEFAULT_MUSIC_PLAYLIST}
 	{COMMON_DEATHS}
 	{UNDERGROUND}
-	{NEW_GOLD_CARRYOVER 40}
 
 	[side]
 		{SIDE_1}
 		gold=100
 		shroud=yes
+		fog=yes
 	[/side]
+	{STARTING_VILLAGES 1 4}
 
 	[side]
 		side=2
@@ -28,20 +30,76 @@
 
 		type=Dread Bat
 		id=Bat
-		name= _ "Familiar Bat"
+		name= _ "Bat"
 		recruit=Giant Mudcrawler,Soulless,Blood Bat
 		canrecruit=yes
 
 		gold=200
+
+		{FLAG_VARIANT6 ragged}
 	[/side]
+	{STARTING_VILLAGES 2 16}
 
 	[event]
 		name=prestart
 		{RECALL_LOYALS}
+
+		# Remove Cain from recall list.
+		[kill]
+			id=Cain
+			animate=no
+		[/kill]
+
+		{GENERIC_UNIT 2 (Giant Mudcrawler) 6 17}
+		{GENERIC_UNIT 2 (Soulless) 10 21}
+
+		[item]
+			image=items/altar-evil.png
+			x,y=19,19
+		[/item]
+
+		{OBJ_ORB_OF_SPEED 19 19 orb_of_speed}
+
+		{GENERIC_UNIT 2 (Giant Mudcrawler) 19 19} {GUARDIAN}
 	[/event]
 
 	[event]
 		name=start
+
+		[message]
+			speaker=Zeth
+			message= _ "It's so big down here! How can one tomb be this huge?"
+		[/message]
+
+		[message]
+			speaker=Morri
+			message= _ "I have heard that Abel had to be buried miles below the surface. Probably these caves were chosen for the tomb because of how deep they went."
+		[/message]
+
+		[message]
+			x,y=6,17
+			message= _ "<i>Gurgle!</i>"
+		[/message]
+
+		[message]
+			speaker=Zeth
+			message= _ "There are other things down here besides us."
+		[/message]
+
+		[message]
+			speaker=Morri
+			message= _ "Yet another manifestation of the dark power permeating this place. I can sense some kind of summoner producing more creatures in the distance."
+		[/message]
+
+		[message]
+			speaker=Zeth
+			message= _ "Is the power coming from Abel's body?"
+		[/message]
+
+		[message]
+			speaker=Morri
+			message= _ "It's impossible for me to be certain, he is still far below. For now we'll just focus on getting there, and that means getting past whatever is here."
+		[/message]
 
 		[objectives]
 			[objective]
@@ -53,4 +111,75 @@
 		[/objectives]
 	[/event]
 
+	[event]
+		name=sighted
+		[filter]
+			id=Bat
+		[/filter]
+		[filter_second]
+			side=1
+		[/filter_second]
+
+		[message]
+			speaker=unit
+			message= _ "Hisss!"
+		[/message]
+
+		[message]
+			speaker=Morri
+			message= _ "There's the summoner."
+		[/message]
+
+		[message]
+			speaker=Zeth
+			message= _ "A bat? There's never been a bat that can summon crawlers."
+		[/message]
+
+		[message]
+			speaker=Morri
+			message= _ "I have heard that, when he was young, Abel had a powerful bat familiar. But it'd be impossible that it was still alive..."
+		[/message]
+	[/event]
+
+	[event]
+		name=die
+		[filter]
+			id=Bat
+		[/filter]
+
+		[message]
+			speaker=Zeth
+			message= _ "That's out of our way, and not too hard either. Let's move."
+		[/message]
+	[/event]
+
+	[event]
+		name=capture
+		[filter]
+			side=1
+			x,y=10,21
+		[/filter]
+
+		{NAMED_LOYAL_UNIT 1 (Troll Whelp) $x1 $y1 (Ked) (_ "Ked")}
+
+		[message]
+			speaker=Ked
+			message= _ "Take me with you! Got lost in caves, long time ago. Filled with danger things!"
+		[/message]
+
+		[message]
+			speaker=Morri
+			message= _ "I see no problem with that, a troll may be a great help."
+		[/message]
+
+		[message]
+			speaker=Zeth
+			message= _ "You may accompany us, troll."
+		[/message]
+
+		[message]
+			speaker=Ked
+			message= _ "Is good!"
+		[/message]
+	[/event]
 [/scenario]
