--- a/scenarios/Entrance.cfg
+++ b/scenarios/Entrance.cfg
@@ -12,11 +12,10 @@
 	{DEFAULT_MUSIC_PLAYLIST}
 	{COMMON_DEATHS}
 	{MIDNIGHT}
-	{NEW_GOLD_CARRYOVER 0}
 
 	[side]
 		{SIDE_1}
-		gold=100
+		gold=0
 		shroud=yes
 	[/side]
 
@@ -47,7 +46,17 @@
 		name=prestart
 		{RECALL_LOYALS}
 
-		{CREATE_RECALL Cain {WCHARACTER_CAIN}}
+		{CREATE_RECALL Cain (
+			{WCHARACTER_CAIN}
+			{IS_LOYAL}
+		)}
+
+		[modify_unit]
+			[filter]
+				id=Cain
+			[/filter]
+			{TRAIT_LOYAL}
+		[/modify_unit]
 
 		[recall]
 			id=Cain
@@ -62,7 +71,31 @@
 			image=items/gohere.png
 			x,y=11,3
 		[/item]
+
+		[item]
+			image=scenery/rock1.png
+			x,y=6,8
+		[/item]
+
+		[item]
+			image=scenery/rock2.png
+			x,y=13,14
+		[/item]
+
+		[item]
+			image=scenery/rock3.png
+			x,y=1,10
+		[/item]
+
+		[item]
+			image=scenery/rock4.png
+			x,y=6,28
+		[/item]
 	[/event]
+
+	{ANIMATED_MAUSOLEUM 9 23}
+	{ANIMATED_MAUSOLEUM 13 4}
+	{ANIMATED_MAUSOLEUM 14 9}
 
 	[event]
 		name=start
@@ -205,6 +238,7 @@
 
 		[endlevel]
 			result=victory
+			bonus=no
 		[/endlevel]
 	[/event]
 [/scenario]
