--- a/utils/characters.cfg
+++ b/utils/characters.cfg
@@ -22,6 +22,8 @@
 		{TRAIT_LOYAL}
 		{TRAIT_INTELLIGENT}
 	[/modifications]
+	{IS_LOYAL}
+	{IS_HERO}
 	unrenamable=yes
 #enddef
 
@@ -33,6 +35,16 @@
 	[/recall]
 #enddef
 
+# Post-earth.
+#define RECALL_LOYALS_2
+	{RECALL_LOYALS}
+
+	[allow_recruit]
+		side=1
+		type=Vampire Bat
+	[/allow_recruit]
+#enddef
+
 #define SIDE_1
 	side=1
 	controller=human
@@ -41,5 +53,5 @@
 
 	{CHARACTER_ZETH}
 
-	recruit=Golem Seedling,Giant Mudcrawler
+	recruit=Giant Mudcrawler
 #enddef
