--- a/utils/objectives.cfg
+++ b/utils/objectives.cfg
@@ -11,4 +11,6 @@
     {S_DEATH Zeth (_ "Ah!")} {SD_WAS_HERO}
     {S_DEATH Morri (_ "No!")} {SD_WAS_HERO}
     {S_DEATH Cain (_ "I die here?")} {SD_WAS_HERO}
+
+    {S_DEATH Ked (_ "Run, friends!")}
 #enddef
