--- a/_main.cfg
+++ b/_main.cfg
@@ -26,6 +26,7 @@ data/add-ons/Zeth_Underland#enddef
 	name= _ "Zeth in the Underland"
 	abbrev= _ "ZitU"
 	define=CAMPAIGN_ZITU
+	extra_defines=ENABLE_ARMAGEDDON_DRAKE
 
 	year="588 YW"
 
