--- a/utils/characters.cfg
+++ b/utils/characters.cfg
@@ -4,7 +4,8 @@
 	type=Rogue Mage
 	id=Zeth
 	name= _ "Zeth"
-	profile=portraits/humans/dark-adept.png
+	# Ridiculous frankenportrait.
+	profile=portraits/zeth.png
 	[modifications]
 		{TRAIT_LOYAL}
 		{TRAIT_RESILIENT}
@@ -27,9 +28,22 @@
 	unrenamable=yes
 #enddef
 
+#define CHARACTER_TWINKLE
+	type=Fire Drake
+	id=Twinkle
+	name= _ "Twinkle"
+	[modifications]
+		{TRAIT_LOYAL}
+		{TRAIT_STRONG}
+		{TRAIT_QUICK}
+	[/modifications]
+	{IS_LOYAL}
+	{IS_HERO}
+	unrenamable=yes
+#enddef
+
 #define RECALL_LOYALS
 	{CREATE_RECALL Morri {CHARACTER_MORRI}}
-
 	[recall]
 		id=Morri
 	[/recall]
@@ -39,10 +53,24 @@
 #define RECALL_LOYALS_2
 	{RECALL_LOYALS}
 
+	[recall]
+		id=Ked
+	[/recall]
+
 	[allow_recruit]
 		side=1
 		type=Vampire Bat
 	[/allow_recruit]
+#enddef
+
+# Post-fire.
+#define RECALL_LOYALS_3
+	{RECALL_LOYALS_2}
+
+	{CREATE_RECALL Twinkle {CHARACTER_TWINKLE}}
+	[recall]
+		id=Twinkle
+	[/recall]
 #enddef
 
 #define SIDE_1
