--- a/utils/objectives.cfg
+++ b/utils/objectives.cfg
@@ -1,9 +1,14 @@
 #textdomain wesnoth-ZitU
 
-#define COMMON_LOSSES
+#define COMMON_LOSSES_DEATHS
 	{DEATH_LOSE_OBJECTIVE (_ "Death of Zeth") id=Zeth}
 	{DEATH_LOSE_OBJECTIVE (_ "Death of Morri") id=Morri}
 	{DEATH_LOSE_OBJECTIVE (_ "Death of Cain") id=Cain}
+	{DEATH_LOSE_OBJECTIVE (_ "Death of Twinkle") id=Twinkle}
+#enddef
+
+#define COMMON_LOSSES
+	{COMMON_LOSSES_DEATHS}
 	{TURNS_RUN_OUT}
 #enddef
 
@@ -11,6 +16,19 @@
     {S_DEATH Zeth (_ "Ah!")} {SD_WAS_HERO}
     {S_DEATH Morri (_ "No!")} {SD_WAS_HERO}
     {S_DEATH Cain (_ "I die here?")} {SD_WAS_HERO}
+
+	# If Twinkle dies, Zeth dies.
+    [event]
+		name=death
+		[filter]
+			id=Twinkle
+		[/filter]
+
+		[kill]
+			id=Zeth
+			animate=yes
+		[/kill]
+    [/event]
 
     {S_DEATH Ked (_ "Run, friends!")}
 #enddef
