--- a/scenarios/Power.cfg
+++ b/scenarios/Power.cfg
@@ -363,6 +363,8 @@
 			speaker=unit
 			message= _ "I can't work on descending and attacking at the same time, now it will take longer."
 		[/message]
+	[/event]
+
 	[event]
 		name=time over
 
