Twinkle death message.

--- a/utils/objectives.cfg
+++ b/utils/objectives.cfg
@@ -24,6 +24,11 @@
 			id=Twinkle
 		[/filter]
 
+		[message]
+			speaker=Zeth
+			message= _ "Twinkle!"
+		[/message]
+
 		[kill]
 			id=Zeth
 			animate=yes
