--- a/scenarios/Power.cfg
+++ b/scenarios/Power.cfg
@@ -277,7 +277,7 @@
 
 		[message]
 			speaker=Zeth
-			message= _ "I... I summoned a fire drake! I feel his thoughts, and the burning fire. His name is Twinkle, by the way."
+			message= _ "I summoned a fire drake! I feel his thoughts, and the burning fire. His name is Twinkle, by the way."
 		[/message]
 
 		[message]
