Power AI and mechanics fixes.

--- a/scenarios/Power.cfg
+++ b/scenarios/Power.cfg
@@ -6,7 +6,6 @@
 	map_data="{LD maps/Power.map}"
 	next_scenario=Water
 
-	turns=15
 	victory_when_enemies_defeated=no
 
 	{DEFAULT_MUSIC_PLAYLIST}
@@ -63,6 +62,10 @@
 		user_team_name= _ "Hostiles"
 
 		hidden=yes
+
+		[ai]
+			aggression=1.0
+		[/ai]
 	[/side]
 
 	[event]
@@ -71,6 +74,11 @@
 
 		# Fire guardian visible right at start.
 		{GENERIC_UNIT 4 (Fire Guardian) 7 7}
+
+		[set_variable]
+			name=old_turn_number
+			value=0
+		[/set_variable]
 	[/event]
 
 	#define OBJECTIVES win
@@ -117,6 +125,9 @@
 			message= _ "We can easily crush them. I am more concerned about the fire elementals emerging from the heat."
 		[/message]
 
+		[sound]
+			name=flame-big.ogg
+		[/sound]
 		[message]
 			type=Fire Guardian
 			message= _ "<i>Hhhhhaaaa</i>"
@@ -212,8 +223,18 @@
 			max_moves=0
 		[/modify_unit]
 
+		[set_variable]
+			name=old_turn_number
+			value=$turn_number
+		[/set_variable]
+
+		[modify_turns]
+			value=8
+			current=1
+		[/modify_turns]
+
 		{OBJECTIVES (
-			description= _ "Protect Morri while she opens a path."
+			description= _ "Survive until Morri opens a path."
 			show_turn_counter=yes
 		)}
 	[/event]
@@ -227,7 +248,7 @@
 
 		[message]
 			speaker=Zeth
-			message= _ "I think I could make one of those. It'd be a lot more help than a mudcrawler."
+			message= _ "I think I could make one of those fire guardians. It'd be a lot more help than a mudcrawler."
 		[/message]
 
 		[message]
@@ -315,7 +336,7 @@
 				}
 
 				-- Limit number made by turns.
-				for i=1,math.ceil(wesnoth.get_variable("turn_number") / 10) do
+				for i=1,math.ceil((wesnoth.get_variable("old_turn_number") + wesnoth.get_variable("turn_number")) / 10) do
 					-- Choose random coordinates for each unit, note that it may override another unit.
 					local c = l[math.random(1, #l)]
 					wesnoth.put_unit{
