Rename directory and ID.

--- a/_main.cfg
+++ b/_main.cfg
@@ -1,10 +1,10 @@
 #textdomain wesnoth-ZitU
 
 #define ZITU_DATAPATH
-data/add-ons/Zeth_Underland#enddef
+data/add-ons/Zeth_in_the_Underland#enddef
 
 #define ZITU_LOADPATH
-~add-ons/Zeth_Underland#enddef
+~add-ons/Zeth_in_the_Underland#enddef
 
 [textdomain]
 	name="wesnoth-ZitU"
@@ -22,7 +22,7 @@ data/add-ons/Zeth_Underland#enddef
 [/textdomain]
 
 [campaign]
-	id=Zeth_Underland
+	id=Zeth_in_the_Underland
 	name= _ "Zeth in the Underland"
 	abbrev= _ "ZitU"
 	define=CAMPAIGN_ZITU
