--- a/scenarios/Power.cfg
+++ b/scenarios/Power.cfg
@@ -408,7 +408,7 @@
 
 		[message]
 			speaker=Morri
-			message= _ "The path is open. Quickly, down here!"
+			message= _ "The path is open. Quickly, jump down here!"
 		[/message]
 	[/event]
 [/scenario]
