--- a/_main.cfg
+++ b/_main.cfg
@@ -26,7 +26,7 @@ data/add-ons/Zeth_in_the_Underland#enddef
 	name= _ "Zeth in the Underland"
 	abbrev= _ "ZitU"
 	define=CAMPAIGN_ZITU
-	extra_defines=ENABLE_ARMAGEDDON_DRAKE
+	extra_defines=ENABLE_ARMAGEDDON_DRAKE,ENABLE_ROGUE_MAGE
 
 	year="588 YW"
 
