--- a/scenarios/Power.cfg
+++ b/scenarios/Power.cfg
@@ -202,7 +202,7 @@
 
 		[message]
 			speaker=Morri
-			message= _ "Yes, I can get us down from here, but it will take time and concentration to prepare the way. I will be unable to move as I work, and even attacking will result in wasted time."
+			message= _ "Yes, I can get us down from here, but it will take time and concentration to prepare the way. I will be unable to move or attack as I work."
 		[/message]
 
 		[message]
@@ -221,6 +221,8 @@
 			[/filter]
 			moves=0
 			max_moves=0
+			attacks=0
+			max_attacks=0
 		[/modify_unit]
 
 		[set_variable]
@@ -229,7 +231,7 @@
 		[/set_variable]
 
 		[modify_turns]
-			value=8
+			value=12
 			current=1
 		[/modify_turns]
 
@@ -360,33 +362,6 @@
 	[/event]
 
 	[event]
-		name=attack
-		first_time_only=no
-		[filter]
-			id=Morri
-			x,y=19,12
-		[/filter]
-
-		[modify_turns]
-			add=1
-		[/modify_turns]
-	[/event]
-
-	[event]
-		name=attack
-		first_time_only=yes
-		[filter]
-			id=Morri
-			x,y=19,12
-		[/filter]
-
-		[message]
-			speaker=unit
-			message= _ "I can't work on descending and attacking at the same time, now it will take longer."
-		[/message]
-	[/event]
-
-	[event]
 		name=time over
 
 		[endlevel]
@@ -404,6 +379,7 @@
 				id=Morri
 			[/filter]
 			max_moves=$saved_morri.max_moves
+			max_attacks=$saved_morri.max_attacks
 		[/modify_unit]
 
 		[message]
