--- a/utils/characters.cfg
+++ b/utils/characters.cfg
@@ -73,6 +73,16 @@
 	[/recall]
 #enddef
 
+# Post-water.
+#define RECALL_LOYALS_4
+	{RECALL_LOYALS_3}
+
+	[allow_recruit]
+		side=1
+		type=Skeleton,Skeleton Archer,Walking Corpse
+	[/allow_recruit]
+#enddef
+
 #define SIDE_1
 	side=1
 	controller=human
@@ -81,5 +91,5 @@
 
 	{CHARACTER_ZETH}
 
-	recruit=Giant Mudcrawler
+	recruit=Giant Mudcrawler,Thug,Ruffian
 #enddef
