More dialogue (remove some ellipsis, Water additions)

--- a/scenarios/Earth.cfg
+++ b/scenarios/Earth.cfg
@@ -136,7 +136,7 @@
 
 		[message]
 			speaker=Morri
-			message= _ "I have heard that, when he was young, Abel had a powerful bat familiar. But it'd be impossible that it was still alive..."
+			message= _ "I have heard that, when he was young, Abel had a powerful bat familiar. But it should be impossible that it is still alive."
 		[/message]
 	[/event]
 
