--- a/scenarios/Power.cfg
+++ b/scenarios/Power.cfg
@@ -260,12 +260,12 @@
 
 		[message]
 			speaker=Zeth
-			message= _ "But I feel so good down here! The lava... the fire... the power!"
+			message= _ "But I feel so good down here. The lava, the fire, the power!"
 		[/message]
 
 		[message]
 			speaker=Morri
-			message= _ "Zeth! No!"
+			message= _ "Zeth, no!"
 		[/message]
 
 		[message]
@@ -384,7 +384,7 @@
 
 		[message]
 			speaker=Morri
-			message= _ "The path is open. Quickly, jump down here!"
+			message= _ "The path is open. Quickly, jump down here, you will fall slowly!"
 		[/message]
 	[/event]
 [/scenario]
