--- a/scenarios/Water.cfg
+++ b/scenarios/Water.cfg
@@ -129,7 +129,7 @@
 
 		[message]
 			speaker=Morri
-			message= _ "That's the weirdest skeleton I've ever seen, Zeth. Congratulations. Master Cain would have something to say about you learning necromancy before golem creation."
+			message= _ "That's the weirdest skeleton I've ever seen, Zeth. Congratulations."
 		[/message]
 
 		[allow_recruit]
@@ -175,5 +175,64 @@
 			{COMMON_LOSSES}
 			{CARRYOVER_OBJECTIVE 40 yes}
 		[/objectives]
+	[/event]
+
+	[event]
+		name=recruit
+		[filter]
+			side=1
+			race=undead
+		[/filter]
+
+		[message]
+			speaker=Morri
+			message= _ "Cain would have something to say about you learning necromancy before golem creation."
+		[/message]
+
+		[message]
+			speaker=Zeth
+			message= _ "Well I can do the one and not the other, so that's an end to it for now."
+		[/message]
+	[/event]
+
+	[event]
+		name=last breath
+		[filter]
+			id=Saranis
+		[/filter]
+
+		[message]
+			speaker=unit
+			message= _ "It was an evil day when you came here!"
+		[/message]
+	[/event]
+
+	[event]
+		name=victory
+
+		[message]
+			speaker=Morri
+			message= _ "I feel like a meteor that has crashed down on an innocent city. We are Thar-Nella, we shouldn't be spreading destruction like this."
+		[/message]
+
+		[message]
+			speaker=Twinkle
+			message= _ "They started it."
+		[/message]
+
+		[message]
+			speaker=Zeth
+			message= _ "More importantly, what do we do now? We can't finish our mission like this, we've been transported to who knows where, and we're certainly not in the tomb of Abel."
+		[/message]
+
+		[message]
+			speaker=Morri
+			message= _ "We must trust that Cain knew what he was doing by sending us into the tomb. I think we should head up into the forest on the coast."
+		[/message]
+
+		[message]
+			speaker=Zeth
+			message= _ "And if he didn't know? Where do we go then? He didn't say anything about being teleported to merfolk-infested islands off a random coast."
+		[/message]
 	[/event]
 [/scenario]
