Life basic skeleton

--- a/scenarios/Water.cfg
+++ b/scenarios/Water.cfg
@@ -149,7 +149,7 @@
 
 		[message]
 			speaker=Saranis
-			message= _ "I see... Necromancers? In my waters? No! You shall all die, for the merfolk will destroy you, vile fiends!"
+			message= _ "I see necromancers!? In my waters? No! You shall all die, for the merfolk will destroy you, vile fiends!"
 		[/message]
 
 		[move_unit]
@@ -208,6 +208,33 @@
 	[/event]
 
 	[event]
+		name=capture
+
+		[filter]
+			side=1
+			x,y=15,34
+		[/filter]
+		variable=saved_zeth
+
+		{LOYAL_UNIT 1 Ruffian 15 34}
+		[+unit]
+			id=RuffianSpokesman
+		[/unit]
+		{LOYAL_UNIT 1 Ruffian 15 34}
+		{LOYAL_UNIT 1 Footpad 15 34}
+
+		[message]
+			speaker=RuffianSpokesman
+			message= _ "The merfolk destroyed the island villages, and we are all that is left. Please, take us with you."
+		[/message]
+
+		[message]
+			speaker=Twinkle
+			message= _ "Come along, and you will have revenge."
+		[/message]
+	[/event]
+
+	[event]
 		name=victory
 
 		[message]
@@ -227,12 +254,17 @@
 
 		[message]
 			speaker=Morri
-			message= _ "We must trust that Cain knew what he was doing by sending us into the tomb. I think we should head up into the forest on the coast."
+			message= _ "We must trust that Cain knew what he was doing by sending us into the tomb. I think we should head up into the forest on the coast, it is the only path forward."
 		[/message]
 
 		[message]
 			speaker=Zeth
 			message= _ "And if he didn't know? Where do we go then? He didn't say anything about being teleported to merfolk-infested islands off a random coast."
+		[/message]
+
+		[message]
+			speaker=Morri
+			message= _ "Then I will find some way to contact Thar-Nella. But this is an important mission, I am confident that Cain had full knowledge of what we must do."
 		[/message]
 	[/event]
 [/scenario]
