--- a/scenarios/Earth.cfg
+++ b/scenarios/Earth.cfg
@@ -6,7 +6,7 @@
 	map_data="{LD maps/Earth.map}"
 	next_scenario=Power
 
-	turns=20
+	turns=28
 	{NEW_GOLD_CARRYOVER 40}
 
 	{DEFAULT_MUSIC_PLAYLIST}
@@ -30,10 +30,10 @@
 		type=Dread Bat
 		id=Bat
 		name= _ "Bat"
-		recruit=Giant Mudcrawler,Soulless,Blood Bat
+		recruit=Mudcrawler,Walking Corpse,Skeleton,Skeleton Archer
 		canrecruit=yes
 
-		gold=200
+		gold=150
 
 		{FLAG_VARIANT6 ragged}
 	[/side]
@@ -59,7 +59,7 @@
 
 		{OBJ_ORB_OF_SPEED 19 19 orb_of_speed}
 
-		{GENERIC_UNIT 2 (Giant Mudcrawler) 19 19} {GUARDIAN}
+		{GENERIC_UNIT 2 (Skeleton) 19 19} {GUARDIAN}
 	[/event]
 
 	[event]
@@ -131,7 +131,7 @@
 
 		[message]
 			speaker=Zeth
-			message= _ "A bat? There's never been a bat that can summon crawlers."
+			message= _ "A bat? There's never been a bat that can summon mudcrawlers and raise the undead."
 		[/message]
 
 		[message]
