--- a/scenarios/Entrance.cfg
+++ b/scenarios/Entrance.cfg
@@ -25,10 +25,10 @@
 		team_name=Enemy
 		user_team_name= _ "Guards"
 
-		type=Sergeant
+		type=Lieutenant
 		id=Guard
 		name= _ "Guard Captain"
-		recruit=Spearman
+		recruit=Spearman,Bowman
 		canrecruit=yes
 
 		gold=100
