--- a/scenarios/Water.cfg
+++ b/scenarios/Water.cfg
@@ -149,7 +149,7 @@
 
 		[message]
 			speaker=Saranis
-			message= _ "I see necromancers!? In my waters? No! You shall all die, for the merfolk will destroy you, vile fiends!"
+			message= _ "Necromancers!? In my waters? No! You shall all die, for the merfolk will destroy you, vile fiends!"
 		[/message]
 
 		[move_unit]
@@ -230,7 +230,7 @@
 
 		[message]
 			speaker=Twinkle
-			message= _ "Come along, and you will have revenge."
+			message= _ "Come along, and you'll have revenge."
 		[/message]
 	[/event]
 
