--- a/_main.cfg
+++ b/_main.cfg
@@ -28,7 +28,7 @@ data/add-ons/Zeth_in_the_Underland#enddef
 	define=CAMPAIGN_ZITU
 	extra_defines=ENABLE_ARMAGEDDON_DRAKE,ENABLE_ROGUE_MAGE
 
-	description={./description.txt}
+	description="{./description.txt}"
 	year="588 YW"
 
 	icon={ZITU_DATAPATH}/icon.png
