--- a/scenarios/Power.cfg
+++ b/scenarios/Power.cfg
@@ -74,11 +74,6 @@
 
 		# Fire guardian visible right at start.
 		{GENERIC_UNIT 4 (Fire Guardian) 7 7}
-
-		[set_variable]
-			name=old_turn_number
-			value=0
-		[/set_variable]
 	[/event]
 
 	#define OBJECTIVES win
@@ -225,14 +220,22 @@
 			max_attacks=0
 		[/modify_unit]
 
-		[set_variable]
-			name=old_turn_number
-			value=$turn_number
-		[/set_variable]
+		[event]
+			name="$(5 + $turn_number)"
+
+			[message]
+				speaker=Zeth
+				message= _ "Are you done yet, Master Morri? They're not stopping."
+			[/message]
+
+			[message]
+				speaker=Morri
+				message= _ "About half-way there. Keep fighting!"
+			[/message]
+		[/event]
 
 		[modify_turns]
-			value=12
-			current=1
+			value="$(11 + $turn_number)"
 		[/modify_turns]
 
 		{OBJECTIVES (
@@ -338,7 +341,7 @@
 				}
 
 				-- Limit number made by turns.
-				for i=1,math.ceil((wesnoth.get_variable("old_turn_number") + wesnoth.get_variable("turn_number")) / 10) do
+				for i=1,math.ceil(wesnoth.get_variable("turn_number") / 5) do
 					-- Choose random coordinates for each unit, note that it may override another unit.
 					local c = l[math.random(1, #l)]
 					wesnoth.put_unit{
@@ -364,11 +367,7 @@
 	[event]
 		name=time over
 
-		[endlevel]
-			result=victory
-			bonus=no
-			{NEW_GOLD_CARRYOVER 40}
-		[/endlevel]
+		{END_VICTORY no}
 	[/event]
 
 	[event]
