--- a/scenarios/Entrance.cfg
+++ b/scenarios/Entrance.cfg
@@ -228,7 +228,7 @@
 
 		[message]
 			speaker=Zeth
-			message= _ "In we go. I'll see you in a little while, Master Cain."
+			message= _ "And we're in. We will see you in a little while, Master Cain."
 		[/message]
 
 		[message]
@@ -236,9 +236,6 @@
 			message= _ "Farewell."
 		[/message]
 
-		[endlevel]
-			result=victory
-			bonus=no
-		[/endlevel]
+		{END_NOGOLD}
 	[/event]
 [/scenario]
