--- a/scenarios/Water.cfg
+++ b/scenarios/Water.cfg
@@ -39,7 +39,7 @@
 		team_name=Enemy
 		user_team_name= _ "Merfolk"
 
-		gold=200
+		gold=250
 
 		type=Mermaid Diviner
 		id=Saranis
@@ -69,13 +69,10 @@
 	[event]
 		name=start
 
-		[sound]
-			name=water-blast.wav
-		[/sound]
-
 		[message]
 			{NARRATION}
 			message= _ "<b>SPLASH!</b>"
+			sound=water-blast.wav
 		[/message]
 
 		[message]
@@ -100,7 +97,7 @@
 
 		[message]
 			speaker=Morri
-			message= _ "Ha, a pity we have no necromancer with us."
+			message= _ "It's a pity we have no necromancer with us."
 		[/message]
 
 		[message]
@@ -114,11 +111,11 @@
 		[/message]
 
 		{THUNDER (
-			{LOYAL_UNIT 1 Chocobone 27 32}
+			{LOYAL_UNIT 1 Chocobone 18 34}
 		)}
 
 		[message]
-			x,y=27,32
+			x,y=18,34
 			message=_ "..."
 		[/message]
 
@@ -144,7 +141,7 @@
 
 		[move_unit]
 			id=Saranis
-			to_x,to_y=32,30
+			to_x,to_y=24,37
 		[/move_unit]
 
 		[message]
@@ -154,7 +151,7 @@
 
 		[move_unit]
 			id=Saranis
-			to_x,to_y=50,7
+			to_x,to_y=46,5
 		[/move_unit]
 
 		[message]
@@ -212,16 +209,15 @@
 
 		[filter]
 			side=1
-			x,y=15,34
+			x,y=20,22
 		[/filter]
-		variable=saved_zeth
 
-		{LOYAL_UNIT 1 Ruffian 15 34}
+		{LOYAL_UNIT 1 Footpad 20 22}
 		[+unit]
 			id=RuffianSpokesman
 		[/unit]
-		{LOYAL_UNIT 1 Ruffian 15 34}
-		{LOYAL_UNIT 1 Footpad 15 34}
+		{LOYAL_UNIT 1 Ruffian 20 22}
+		{LOYAL_UNIT 1 Footpad 20 22}
 
 		[message]
 			speaker=RuffianSpokesman
