--- a/scenarios/Power.cfg
+++ b/scenarios/Power.cfg
@@ -120,12 +120,10 @@
 			message= _ "We can easily crush them. I am more concerned about the fire elementals emerging from the heat."
 		[/message]
 
-		[sound]
-			name=flame-big.ogg
-		[/sound]
 		[message]
 			type=Fire Guardian
 			message= _ "<i>Hhhhhaaaa</i>"
+			sound=flame-big.ogg
 		[/message]
 
 		[message]
