Basic Life map.

--- a/scenarios/Entrance.cfg
+++ b/scenarios/Entrance.cfg
@@ -117,7 +117,7 @@
 
 		[message]
 			speaker=Zeth
-			message= _ "Then we should move at once, while it's still dark. I don't want to disappoint you... or Lady Nella."
+			message= _ "Then we should move at once, while it's still dark. I don't want to disappoint either of you, or Lady Nella."
 		[/message]
 
 		[message]
