--- a/scenarios/Life.cfg
+++ b/scenarios/Life.cfg
@@ -20,9 +20,48 @@
 		shroud=yes
 	[/side]
 
+	[side]
+		side=2
+		controller=ai
+		share_vision=none
+
+		[ai]
+			ai_algorithm=idle_ai
+		[/ai]
+
+		team_name=Friendly,Forest
+		user_team_name= _ "Elves"
+
+		hidden=yes
+	[/side]
+
+	[side]
+		side=3
+		controller=ai
+
+		team_name=Enemy,Forest
+		user_team_name= _ "The Forest"
+
+		hidden=yes
+	[/side]
+
 	[event]
 		name=prestart
 		{RECALL_LOYALS_4}
+	[/event]
+
+	[event]
+		name=moveto
+		[filter]
+			side=1
+			x=10-99
+			y=1-48
+		[/filter]
+
+		[message]
+			speaker=unit
+			message= _ "The forest grows much greener to the north."
+		[/message]
 	[/event]
 
 	[event]
