--- a/utils/characters.cfg
+++ b/utils/characters.cfg
@@ -86,7 +86,7 @@
 #define SIDE_1
 	side=1
 	controller=human
-	team_name=Thar-Nella
+	team_name=Friendly
 	user_team_name= _ "Thar-Nella"
 
 	{CHARACTER_ZETH}
