More Life dialogue; more pierce for merfolk in Water.

--- a/scenarios/Life.cfg
+++ b/scenarios/Life.cfg
@@ -58,10 +58,24 @@
 			y=1-48
 		[/filter]
 
-		[message]
-			speaker=unit
-			message= _ "The forest grows much greener to the north."
-		[/message]
+		[if]
+			[variable]
+				name=unit.race
+				equals=troll
+			[/variable]
+			[then]
+				[message]
+					speaker=unit
+					message= _ "Much green up here!"
+				[/message]
+			[/then]
+			[else]
+				[message]
+					speaker=unit
+					message= _ "The forest grows much greener to the north."
+				[/message]
+			[/else]
+		[/if]
 	[/event]
 
 	[event]
