--- a/scenarios/Water.cfg
+++ b/scenarios/Water.cfg
@@ -58,7 +58,7 @@
 
 		type=Merman Entangler
 		canrecruit=yes
-		recruit=Merman Netcaster,Merman Warrior,Mermaid Initiate
+		recruit=Merman Netcaster,Merman Warrior,Mermaid Initiate,Merman Spearman
 	[/side]
 
 	[event]
