--- a/scenarios/Earth.cfg
+++ b/scenarios/Earth.cfg
@@ -72,7 +72,7 @@
 
 		[message]
 			speaker=Morri
-			message= _ "I have heard that Abel had to be buried miles below the surface. Probably these caves were chosen for the tomb because of how deep they went."
+			message= _ "I have heard that Abari had to be buried miles below the surface. Probably these caves were chosen for the tomb because of how deep they went."
 		[/message]
 
 		[message]
@@ -92,7 +92,7 @@
 
 		[message]
 			speaker=Zeth
-			message= _ "Is the power coming from Abel's body?"
+			message= _ "Is the power coming from Abari's body?"
 		[/message]
 
 		[message]
@@ -136,7 +136,7 @@
 
 		[message]
 			speaker=Morri
-			message= _ "I have heard that, when he was young, Abel had a powerful bat familiar. But it should be impossible that it is still alive."
+			message= _ "I have heard that, when he was young, Abari had a powerful bat familiar. But it should be impossible that it is still alive."
 		[/message]
 	[/event]
 
