--- a/scenarios/Entrance.cfg
+++ b/scenarios/Entrance.cfg
@@ -102,12 +102,12 @@
 
 		[message]
 			speaker=Cain
-			message= _ "Here we are, in the graveyard of the great mage Abel. Repeat what you must do, Zeth."
+			message= _ "Here we are, in the graveyard of the great mage Abari. Repeat what you must do, Zeth."
 		[/message]
 
 		[message]
 			speaker=Zeth
-			message= _ "My gang and I must retrieve the body of Abel from his tomb. You've asked me that already, Master Cain. Besides, Master Morri will be with me."
+			message= _ "My gang and I must retrieve the body of Abari from his tomb. You've asked me that already, Master Cain. Besides, Master Morri will be with me."
 		[/message]
 
 		[message]
