--- a/scenarios/Life.cfg
+++ b/scenarios/Life.cfg
@@ -32,8 +32,13 @@
 		team_name=Friendly,Forest
 		user_team_name= _ "Elves"
 
+		type=Elvish Shyde
+		id=Ceradia
+		name= _ "Ceradia"
+
 		hidden=yes
 	[/side]
+	{STARTING_VILLAGES 2 16}
 
 	[side]
 		side=3
@@ -48,6 +53,9 @@
 	[event]
 		name=prestart
 		{RECALL_LOYALS_4}
+
+		{GENERIC_UNIT 2 (Elvish Avenger) 27 34}
+		{GENERIC_UNIT 2 (Elvish Avenger) 27 38}
 	[/event]
 
 	[event]
@@ -79,7 +87,84 @@
 	[/event]
 
 	[event]
+		name=sighted
+		[filter]
+			id=Ceradia
+		[/filter]
+
+		[message]
+			speaker=Ceradia
+			message= _ "I welcome you to the Valley of Life, travellers. I am Ceradia, the sacred guardian."
+		[/message]
+
+		[message]
+			speaker=Morri
+			message= _ "Will you let us pass? We have no quarrel with you and mean no harm to you or this valley."
+		[/message]
+
+		[message]
+			speaker=Ceradia
+			message= _ "And where do you come from? I know you are necromancers."
+		[/message]
+
+		[message]
+			speaker=Zeth
+			message= _ "I assure you we mean no harm. We are magi of Thar-Nella, here through no fault of our own."
+		[/message]
+
+		[message]
+			speaker=Ceradia
+			message= _ "You claim to be from Thar-Nella. Then you have come to the Valley of Life seeking the Holy One, Abari, is this not so?"
+		[/message]
+
+		[message]
+			speaker=Zeth
+			message= _ "How do you know his name?"
+		[/message]
+
+		[message]
+			speaker=Ceradia
+			message= _ "There is a tomb at the far end of this valley. Within it lies Abari, Master of Life and Death. We are the guardians of the entrance."
+		[/message]
+
+		[message]
+			speaker=Morri
+			message= _ "Abari was a necromancer, yet you guard his tomb and give him praise. What is this?"
+		[/message]
+
+		[message]
+			speaker=Ceradia
+			message= _ "The Holy One is not as other necromancers, who slay the living and halt natural decay. He mastered not only death, but also life. It is his power, emerging from his tomb, that gives this valley lush green forests as autumn passes."
+		[/message]
+
+		[message]
+			speaker=Zeth
+			message= _ "Will you allow us to go to his tomb?"
+		[/message]
+
+		[message]
+			speaker=Ceradia
+			message= _ "I have guarded this tomb for fifty-nine years. In that time I have granted passage to murderers, traitors, orcs, pilgrims and holy men. All have found what they sought, and you are no different. We will not interfere with your passage. Go!"
+		[/message]
+	[/event]
+
+	[event]
 		name=start
+
+		[message]
+			speaker=Zeth
+			message= _ "Don't you feel something strange in the air here, Master Morri?"
+		[/message]
+
+		[message]
+			speaker=Morri
+			message= _ "I do, but there is still only one path: forward."
+		[/message]
+
+		[message]
+			speaker=Twinkle
+			message= _ "I don't like this place."
+		[/message]
 
 		[objectives]
 			[objective]
