--- a/scenarios/Water.cfg
+++ b/scenarios/Water.cfg
@@ -245,7 +245,7 @@
 
 		[message]
 			speaker=Zeth
-			message= _ "More importantly, what do we do now? We can't finish our mission like this, we've been transported to who knows where, and we're certainly not in the tomb of Abel."
+			message= _ "More importantly, what do we do now? We can't finish our mission like this, we've been transported to who knows where, and we're certainly not in the tomb of Abari."
 		[/message]
 
 		[message]
