--- a/scenarios/Entrance.cfg
+++ b/scenarios/Entrance.cfg
@@ -49,6 +49,7 @@
 		{CREATE_RECALL Cain (
 			{WCHARACTER_CAIN}
 			{IS_LOYAL}
+			{IS_HERO}
 		)}
 
 		[modify_unit]
@@ -56,6 +57,8 @@
 				id=Cain
 			[/filter]
 			{TRAIT_LOYAL}
+			# At this point Cain is ~90 years old. We can indicate this through the aged trait.
+			{TRAIT_AGED}
 		[/modify_unit]
 
 		[recall]
@@ -202,6 +205,18 @@
 		[message]
 			speaker=unit
 			message= _ "I cannot undo the seal."
+		[/message]
+	[/event]
+
+	[event]
+		name=attacker hits
+		[filter]
+			id=Zeth
+		[/filter]
+
+		[message]
+			speaker=Cain
+			message= _ "It gives me great pleasure to see the youth of Thar-Nella applying their talent."
 		[/message]
 	[/event]
 
