--- a/scenarios/Life.cfg
+++ b/scenarios/Life.cfg
@@ -144,7 +144,7 @@
 
 		[message]
 			speaker=Ceradia
-			message= _ "I have guarded this tomb for fifty-nine years. In that time I have granted passage to murderers, traitors, orcs, pilgrims and holy men. All have found what they sought, and you are no different. We will not interfere with your passage. Go!"
+			message= _ "I have guarded this tomb for more than fifty years. In that time I have granted passage to murderers, traitors, orcs, pilgrims and holy men. All have found what they sought, and you are no different. We will not interfere with your passage. Go!"
 		[/message]
 	[/event]
 
