Life implementation forward.

--- a/scenarios/Life.cfg
+++ b/scenarios/Life.cfg
@@ -15,7 +15,7 @@
 
 	[side]
 		{SIDE_1}
-		gold=200
+		gold=150
 		fog=yes
 		shroud=yes
 	[/side]
@@ -56,6 +56,42 @@
 
 		{GENERIC_UNIT 2 (Elvish Avenger) 27 34}
 		{GENERIC_UNIT 2 (Elvish Avenger) 27 38}
+
+		{GENERIC_UNIT 2 (Elvish Champion) 20 31}
+
+		[lua]
+			code=<<
+				for _,v in ipairs({
+					{17, 13},
+					{27, 11},
+					{33, 7},
+					{49, 9},
+					{49, 15},
+					{58, 17},
+					{54, 36},
+				}) do
+					wesnoth.put_unit{
+						side = 3,
+						type = wexlfu.math.choice_w{{"Wose", 3}, {"Elder Wose", 2}, {"Ancient Wose", 1}},
+						x = v[1],
+						y = v[2],
+						ai_special = "guardian",
+					}
+				end
+>>
+		[/lua]
+
+		[micro_ai]
+            side=3
+            ai_type=wolves
+            action=add
+
+            [filter]
+                type=Wolf,Great Wolf,Direwolf
+            [/filter]
+            [filter_second]
+            [/filter_second]
+        [/micro_ai]
 	[/event]
 
 	[event]
@@ -84,6 +120,24 @@
 				[/message]
 			[/else]
 		[/if]
+	[/event]
+
+	[event]
+		name=moveto
+		[filter]
+			side=1
+			x=1-99
+			y=1-30
+		[/filter]
+
+		[message]
+			x,y=20,31
+			message= _ "Beware the wilds, for though we let you pass, the life of this valley may descend violently upon you. We are not guardians of those who pass through, neither shall we interfere."
+		[/message]
+
+		{REPEAT 3 {GENERIC_UNIT 3 (Gryphon) 9 15}}
+		{REPEAT 3 {GENERIC_UNIT 3 (Great Wolf) 26 19}}
+		{GENERIC_UNIT 3 (Direwolf) 26 19}
 	[/event]
 
 	[event]
@@ -144,7 +198,7 @@
 
 		[message]
 			speaker=Ceradia
-			message= _ "I have guarded this tomb for more than fifty years. In that time I have granted passage to murderers, traitors, orcs, pilgrims and holy men. All have found what they sought, and you are no different. We will not interfere with your passage. Go!"
+			message= _ "I have guarded this tomb for more than fifty years. In that time I have granted passage to murderers, traitors, orcs, pilgrims and holy men. All have found what they sought, and you are no different. We will not interfere with your passage when the Holy One is waiting for you. Go!"
 		[/message]
 	[/event]
 
