--- a/scenarios/Power.cfg
+++ b/scenarios/Power.cfg
@@ -341,7 +341,7 @@
 				-- Limit number made by turns.
 				for i=1,math.ceil(wesnoth.get_variable("turn_number") / 5) do
 					-- Choose random coordinates for each unit, note that it may override another unit.
-					local c = l[math.random(1, #l)]
+					local c = wexlfu.math.choice(l)
 					wesnoth.put_unit{
 						side = 4,
 						type = "Fire Guardian",
