--- a/wexlfu.cfg
+++ b/wexlfu.cfg
@@ -1,13 +1,17 @@
 # Wexlfu available separately.
 #ifhave ~add-ons/Wexlfu/loader.cfg
 #define WXFU_CONFIG_BINARY_PATH
-data/add-ons/Wexlfu/#enddef
+data/add-ons/Wexlfu#enddef
+#define WXFU_CONFIG_PREFIX
+~add-ons/Wexlfu#enddef
 {~add-ons/Wexlfu/loader.cfg}
 #else
 # Built in Wexlfu.
 #ifhave ./Wexlfu/loader.cfg
 #define WXFU_CONFIG_BINARY_PATH
-{ZITU_DATAPATH}/Wexlfu/#enddef
+{ZITU_DATAPATH}/Wexlfu#enddef
+#define WXFU_CONFIG_PREFIX
+{ZITU_LOADPATH}/Wexlfu#enddef
 {./Wexlfu/loader.cfg}
 #endif
 #endif
