put_unit_vacant

--- a/scenarios/Life.cfg
+++ b/scenarios/Life.cfg
@@ -70,7 +70,7 @@
 					{58, 17},
 					{54, 36},
 				}) do
-					wesnoth.put_unit{
+					wexlfu.map.put_unit_vacant{
 						side = 3,
 						type = wexlfu.math.choice_w{{"Wose", 3}, {"Elder Wose", 2}, {"Ancient Wose", 1}},
 						x = v[1],
@@ -138,6 +138,18 @@
 		{REPEAT 3 {GENERIC_UNIT 3 (Gryphon) 9 15}}
 		{REPEAT 3 {GENERIC_UNIT 3 (Great Wolf) 26 19}}
 		{GENERIC_UNIT 3 (Direwolf) 26 19}
+	[/event]
+
+	[event]
+		name=moveto
+		[filter]
+			side=1
+			x=37-99
+			y=1-99
+		[/filter]
+
+		{REPEAT 3 {GENERIC_UNIT 3 (Great Wolf) 45 17}}
+		{GENERIC_UNIT 3 (Direwolf) 45 17}
 	[/event]
 
 	[event]
