--- a/scenarios/Power.cfg
+++ b/scenarios/Power.cfg
@@ -340,9 +340,9 @@
 
 				-- Limit number made by turns.
 				for i=1,math.ceil(wesnoth.get_variable("turn_number") / 5) do
-					-- Choose random coordinates for each unit, note that it may override another unit.
+					-- Choose random coordinates for each unit.
 					local c = wexlfu.math.choice(l)
-					wesnoth.put_unit{
+					wexlfu.map.put_unit_vacant{
 						side = 4,
 						type = "Fire Guardian",
 						x = c[1],
