--- a/scenarios/Life.cfg
+++ b/scenarios/Life.cfg
@@ -59,6 +59,17 @@
 
 		{GENERIC_UNIT 2 (Elvish Champion) 20 31}
 
+		{GENERIC_UNIT 2 (Elvish Ranger) 24 12}
+		{GENERIC_UNIT 2 (Elvish Hero) 26 13}
+
+		{GENERIC_UNIT 2 (Elvish Enchantress) 53 20}
+
+		{GENERIC_UNIT 2 (Elvish Druid) 57 46}
+		{GENERIC_UNIT 2 (Elvish Champion) 55 46}
+
+		{NAMED_UNIT 2 (Elvish Sylph) 54 53 Neriande (_ "Neriande") ()}
+
+		# Woses on great trees.
 		[lua]
 			code=<<
 				for _,v in ipairs({
@@ -78,20 +89,23 @@
 						ai_special = "guardian",
 					}
 				end
->>
+			>>
 		[/lua]
 
-		[micro_ai]
-            side=3
-            ai_type=wolves
-            action=add
-
-            [filter]
-                type=Wolf,Great Wolf,Direwolf
-            [/filter]
-            [filter_second]
-            [/filter_second]
-        [/micro_ai]
+		[lua]
+			code=<<
+				function life_pack(types, size, x, y)
+					for _=1,size do
+						wexlfu.map.put_unit_vacant{
+							side = 3,
+							type = wexlfu.math.choice_w(types),
+							x = x,
+							y = y,
+						}
+					end
+				end
+			>>
+		[/lua]
 	[/event]
 
 	[event]
@@ -135,9 +149,13 @@
 			message= _ "Beware the wilds, for though we let you pass, the life of this valley may descend violently upon you. We are not guardians of those who pass through, neither shall we interfere."
 		[/message]
 
-		{REPEAT 3 {GENERIC_UNIT 3 (Gryphon) 9 15}}
-		{REPEAT 3 {GENERIC_UNIT 3 (Great Wolf) 26 19}}
-		{GENERIC_UNIT 3 (Direwolf) 26 19}
+		[lua]
+			code = <<
+				life_pack({{"Gryphon", 3}}, wesnoth.random(2, 4), 9, 15)
+				life_pack({{"Wolf", 1}, {"Great Wolf", 3}, {"Direwolf", 1}}, wesnoth.random(3, 5), 26, 19)
+				life_pack({{"Tentacle of the Deep", 1}}, wesnoth.random(1, 5), 15, 12)
+			>>
+		[/lua]
 	[/event]
 
 	[event]
@@ -148,8 +166,31 @@
 			y=1-99
 		[/filter]
 
-		{REPEAT 3 {GENERIC_UNIT 3 (Great Wolf) 45 17}}
-		{GENERIC_UNIT 3 (Direwolf) 45 17}
+		[lua]
+			code = <<
+				life_pack({{"Wolf", 1}, {"Great Wolf", 3}, {"Direwolf", 1}}, wesnoth.random(3, 5), 45, 17)
+				life_pack({{"Cuttle Fish", 3}, {"Water Serpent", 2}, {"Sea Serpent", 1}, {"Tentacle of the Deep", 1}}, wesnoth.random(4, 6), 60, 3)
+				life_pack({{"Young Ogre", 1}, {"Ogre", 3}}, wesnoth.random(4, 7), 63, 21)
+			>>
+		[/lua]
+	[/event]
+
+	[event]
+		name=moveto
+		[filter]
+			side=1
+			x=40-99
+			y=17-99
+		[/filter]
+
+		[lua]
+			code = <<
+				life_pack({{"Giant Scorpling", 1}, {"Giant Scorpion", 3}}, wesnoth.random(2, 4), 59, 31)
+				life_pack({{"Young Ogre", 1}, {"Ogre", 3}}, wesnoth.random(4, 7), 43, 33)
+				life_pack({{"Giant Rat", 1}, {"Giant Spider", 3}}, wesnoth.random(1, 3), 57, 46)
+				life_pack({{"Cuttle Fish", 3}, {"Water Serpent", 2}, {"Sea Serpent", 1}, {"Naga Myrmidon", 1}}, wesnoth.random(3, 5), 56, 50)
+			>>
+		[/lua]
 	[/event]
 
 	[event]
@@ -212,6 +253,53 @@
 			speaker=Ceradia
 			message= _ "I have guarded this tomb for more than fifty years. In that time I have granted passage to murderers, traitors, orcs, pilgrims and holy men. All have found what they sought, and you are no different. We will not interfere with your passage when the Holy One is waiting for you. Go!"
 		[/message]
+	[/event]
+
+	[event]
+		name=sighted
+
+		[filter]
+			id=Neriande
+		[/filter]
+
+		[message]
+			speaker=unit
+			message= _ "I am keeper of the gate. Enter, pilgrims."
+		[/message]
+
+		[objectives]
+			[objective]
+				condition=win
+				description= _ "Have Zeth enter the tomb."
+			[/objective]
+			{COMMON_LOSSES}
+			{CARRYOVER_OBJECTIVE 40 yes}
+		[/objectives]
+
+		[item]
+			image=items/gohere.png
+			x,y=57,55
+		[/item]
+
+		[event]
+			name=moveto
+			[filter]
+				id=Zeth
+				x,y=57,55
+			[/filter]
+
+			[message]
+				speaker=Zeth
+				message= _ "Let's go, underground again."
+			[/message]
+
+			[message]
+				speaker=Neriande
+				message= _ "I give you a final warning, pilgrims. This gate will shut behind you. We will await your return on the other side, but woe unto you if you have neither seen nor touched the Holy One."
+			[/message]
+
+			{END_VICTORY yes}
+		[/event]
 	[/event]
 
 	[event]
