--- a/scenarios/Life.cfg
+++ b/scenarios/Life.cfg
@@ -156,6 +156,60 @@
 				life_pack({{"Tentacle of the Deep", 1}}, wesnoth.random(1, 5), 15, 12)
 			>>
 		[/lua]
+
+		[message]
+			speaker=Twinkle
+			message= _ "I smell hunters nearby."
+		[/message]
+
+		[set_variable]
+			name=first_wild_turn_number
+			value=$turn_number
+		[/set_variable]
+
+		[event]
+			name="turn $(1 + $first_wild_turn_number)"
+
+			[message]
+				speaker=Zeth
+				message= _ "Well, Master Morri, what do you think of this situation? Elves are guarding Abari's tomb. How can we make sense of it?"
+			[/message]
+
+			[message]
+				speaker=Morri
+				message= _ "Don't underestimate my abilities. I have been theorizing ever since we were transported from the tomb under the graveyard to that coast."
+			[/message]
+
+			[message]
+				speaker=Zeth
+				message= _ "Do you have any answers?"
+			[/message]
+
+			[message]
+				speaker=Morri
+				message= _ "Perhaps. Abari was buried over half a century ago, and in the time since then it is possible the dark power, whatever it may be, shifted the deepest parts of the tomb to here and left behind only a portal. It then built this valley, and through some means gained the support of these elves. There is certainly much power here to keep this valley so lush. Unfortunantely, Cain did not mention any specifics about the dark power or anything of this place."
+			[/message]
+
+			[message]
+				speaker=Zeth
+				message= _ "Ah, you admit that Master Cain left out important details!"
+			[/message]
+
+			[message]
+				speaker=Morri
+				message= _ "I didn't 'admit' anything. He told us what we need to finish our mission, and little more."
+			[/message]
+
+			[message]
+				speaker=Twinkle
+				message= _ "Zeth says he's lived ninety years, maybe the old man's just forgetful."
+			[/message]
+
+			[message]
+				speaker=Morri
+				message= _ "Silence! Even familiars must learn respect."
+			[/message]
+		[/event]
 	[/event]
 
 	[event]
@@ -290,12 +344,12 @@
 
 			[message]
 				speaker=Zeth
-				message= _ "Let's go, underground again."
+				message= _ "Let's go underground again."
 			[/message]
 
 			[message]
 				speaker=Neriande
-				message= _ "I give you a final warning, pilgrims. This gate will shut behind you. We will await your return on the other side, but woe unto you if you have neither seen nor touched the Holy One."
+				message= _ "I will give you final advice, pilgrims. This gate will shut behind you. We will await your return on the other side, but woe unto you if you have neither seen nor touched the Holy One."
 			[/message]
 
 			{END_VICTORY yes}
