--- a/scenarios/Power.cfg
+++ b/scenarios/Power.cfg
@@ -218,8 +218,13 @@
 			max_attacks=0
 		[/modify_unit]
 
+		[set_variable]
+			name=first_morri_turn_number
+			value=$turn_number
+		[/set_variable]
+
 		[event]
-			name="$(5 + $turn_number)"
+			name="turn $(5 + $first_morri_turn_number)"
 
 			[message]
 				speaker=Zeth
